--- a/horizontal-idea/css/style.css
+++ b/horizontal-idea/css/style.css
@@ -20,6 +20,7 @@
 }
 html, body {
   height: 100%;
+  width: 100%;
 }
 
 html {
@@ -28,6 +29,10 @@ html {
 
 /** VARIABLES--COLOURS **/
 /** VARIABLES--SCREEN SIZE **/
+.w-80 {
+  width: 90%;
+}
+
 .h-100 {
   height: 100%;
 }
@@ -84,7 +89,6 @@ html {
 .neumorphic-shadow-social {
   border-radius: 5px;
   padding: 3.6px 5px;
-  box-shadow: #000000 2px 2px 4px, #4d4d4d -2px -2px 4px;
 }
 
 .neumorphic-shadow {
@@ -98,7 +102,17 @@ html {
 
 .background-gradient-green {
   background: #1f3035;
-  background: linear-gradient(0deg, #32505a 0%, #1f3035 100%);
+  background: linear-gradient(0deg, #32505a 0%, #1e1e1e 100%);
+}
+
+.background-gradient-blue {
+  background: #213047;
+  background: linear-gradient(0deg, #32505a 0%, #32505a 100%);
+}
+
+.background-gradient-red {
+  background: #983037;
+  background: linear-gradient(0deg, #c4424b 0%, #32505a 100%);
 }
 
 .scroll {
@@ -305,7 +319,7 @@ html {
 }
 
 .position-arrow-back {
-  position: fixed;
+  position: absolute;
   z-index: 10;
   transform-origin: left top;
   bottom: 32px;
@@ -315,11 +329,53 @@ html {
   animation: MoveUpDown 10s linear infinite;
 }
 
+.position-arrow-prev {
+  margin-left: 20px;
+  z-index: 10;
+  transform-origin: left top;
+  bottom: 32px;
+  left: 25%;
+  top: 50%;
+  transition: 1s cubic-bezier(0.75, 0.17, 0.54, 0.69);
+  animation: MoveUpDown 10s linear infinite;
+}
+
+.position-arrow-next {
+  margin-right: 20px;
+  z-index: 10;
+  transform-origin: left top;
+  bottom: 32px;
+  right: 25%;
+  top: 50%;
+  transition: 1s cubic-bezier(0.75, 0.17, 0.54, 0.69);
+  animation: MoveUpDown 10s linear infinite;
+}
+
+.position-arrow-close {
+  position: absolute;
+  z-index: 10;
+  transform-origin: left top;
+  bottom: 32px;
+  right: 15%;
+  top: 15%;
+}
+
 .right-bottom {
   position: fixed;
   transform: translate(-50%, 0) scale(0.6);
   transform-origin: left top;
   bottom: 8px;
+  left: 100%;
+  margin-left: -19px;
+  margin-bottom: -19px;
+  transition: 1s cubic-bezier(0.75, 0.17, 0.54, 0.69);
+}
+
+.right-bottom-up {
+  position: fixed;
+  transform: translate(-50%, 0) scale(0.6);
+  transform-origin: left top;
+  bottom: 50px;
   left: 100%;
   margin-left: -19px;
   margin-bottom: -19px;
@@ -359,28 +415,60 @@ html {
   animation: MoveLeftRight 1s cubic-bezier(1, 0.66, 0, 0.24) infinite;
 }
 
+.move-right-left {
+  z-index: 2;
+  position: relative;
+}
+
+.move-right-left:hover {
+  position: relative;
+  transform: translateY(0);
+  will-change: transform;
+  animation: MoveRightLeft 1s cubic-bezier(1, 0.66, 0, 0.24) infinite;
+}
+
 .display-none {
   display: none;
 }
 
+.visibility-none {
+  visibility: hidden;
+  opacity: 0;
+  transition: visibility 0s, opacity 0.5s linear;
+}
+
+.visibility-visible {
+  visibility: visible;
+  opacity: 1;
+  transition: visibility 0s, opacity 0.5s linear;
+}
+
 .websites-rotator {
-  position: absolute;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  flex-wrap: wrap;
+  margin-top: 140px;
+  padding-left: 50px;
+  padding-right: 50px;
 }
 
 .websites-rotator-fixed {
-  position: relative;
+  position: absolute;
   flex-direction: row;
+}
+
+.website-element-div {
+  margin-top: 30px;
 }
 
 .website-element {
   background-size: cover;
   background-repeat: no-repeat;
+  cursor: pointer;
   width: 250px;
   height: 400px;
   filter: sepia(70%);
-  margin-right: 10%;
-  transition: 1s cubic-bezier(0.75, 0.17, 0.54, 0.69);
-  animation: MoveUpDownWebsites 5s linear infinite;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 }
 
@@ -393,10 +481,27 @@ html {
 .website-element-one {
   background-size: cover;
   background-repeat: no-repeat;
-  width: 300px;
-  height: 100%;
-  filter: sepia(70%);
+  width: 400px;
+  height: 80%;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  overflow-y: auto;
+}
+.website-element-one::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  background-color: rgba(0, 0, 0, 0);
+  border-radius: 10px;
+}
+.website-element-one::-webkit-scrollbar {
+  width: 10px;
+  background-color: rgba(0, 0, 0, 0);
+}
+.website-element-one::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  background-image: -webkit-gradient(linear, left bottom, left top, color-stop(0.44, #7a99d9), color-stop(0.72, #497dbd), color-stop(0.86, #1c3a94));
+}
+
+.element-big {
+  width: 100%;
 }
 
 .scale-website-element {
@@ -407,6 +512,55 @@ html {
   filter: sepia(0);
   box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
   transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+}
+
+.logo-list {
+  margin-top: 150px;
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+  height: 70%;
+  justify-content: space-around;
+  padding: 20px;
+}
+
+.logo-thumbnail {
+  flex: 0 1 calc(25% - 20px);
+  height: 200px;
+  width: 200px;
+  margin: 15px 0;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.logo-thumbnail-image {
+  height: 100%;
+  border-radius: 27px;
+  background: linear-gradient(145deg, #365660, #2d4851);
+  box-shadow: 7px 7px 14px #243940, -7px -7px 14px #416774;
+}
+
+.logo-thumbnail-lightbox {
+  background: rgba(0, 0, 0, 0.65);
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  z-index: 100;
+}
+
+.logo-thumbnail-big {
+  height: 60%;
+  background: #dcdfdf;
+  border-radius: 27px;
+}
+
+.logo-thumbnail-image-big {
+  height: 100%;
 }
 
 .element-1 {
@@ -427,6 +581,41 @@ html {
 .element-4 {
   animation-delay: 2s;
   margin-left: -2000px;
+}
+
+.other {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-top: 180px;
+}
+
+.other-image {
+  width: 500px;
+  z-index: 11;
+}
+.other-image img {
+  width: 100%;
+}
+
+.other-group {
+  display: flex;
+}
+
+.other-text {
+  border: #000 solid thick;
+  width: 300px;
+  height: 400px;
+  margin-left: -100px;
+  margin-top: -50px;
+  z-index: 10;
+}
+
+.other-text-size {
+  text-align: justify;
+  color: #ffe08a;
+  font-size: 2em;
+  padding: 30px 30px 30px 160px;
 }
 
 .slide-in-left {
@@ -471,6 +660,14 @@ html {
   }
   50% {
     transform: translateX(-5px);
+  }
+}
+@keyframes MoveRightLeft {
+  0%, 100% {
+    transform: translateX(0);
+  }
+  50% {
+    transform: translateX(5px);
   }
 }
 @keyframes MoveUpDownWebsites {
