--- a/horizontal-idea/sass/style.scss
+++ b/horizontal-idea/sass/style.scss
@@ -56,6 +56,10 @@ $xxLarge-width: "screen and (max-width: 1920px)";
   width: 90%;
 }
 
+.m-t-150 {
+  margin-top: 150px;
+}
+
 .h-100 {
   height: 100%;
 }
@@ -83,6 +87,10 @@ $xxLarge-width: "screen and (max-width: 1920px)";
 
 .justify-content-around {
   justify-content: space-around;
+}
+
+.justify-content-between {
+  justify-content: space-between;
 }
 
 .justify-content-end {
@@ -137,6 +145,11 @@ $xxLarge-width: "screen and (max-width: 1920px)";
 .background-gradient-red {
   background: $background-gradient-red-dark;
   background: linear-gradient(0deg, $background-gradient-red-light 0%, $background-gradient-green-light 100%);
+}
+
+.background-gradient-grey {
+  background: $background-gradient-black-dark;
+  background: linear-gradient(0deg, $background-gradient-black-dark 30%, $background-gradient-red-light 100%);
 }
 
 .scroll {
@@ -199,6 +212,10 @@ $xxLarge-width: "screen and (max-width: 1920px)";
   margin-bottom: 30px;
 }
 
+.m-b-50 {
+  margin-bottom: 50px;
+}
+
 .m-t-8 {
   margin-top: 8px;
 }
@@ -232,6 +249,11 @@ $xxLarge-width: "screen and (max-width: 1920px)";
   border: none;
 }
 
+.centerize-image{
+  display: flex !important;
+  justify-content: center;
+}
+
 .social-media {
   padding: 5px;
   margin: 25px;
@@ -246,7 +268,7 @@ $xxLarge-width: "screen and (max-width: 1920px)";
   left: 50%;
   transform: translate(-50%, 0);
   transform-origin: left top;
-  z-index: 10;
+  z-index: 100;
 }
 
 .name {
@@ -621,6 +643,7 @@ $xxLarge-width: "screen and (max-width: 1920px)";
 
   img {
     width: 100%;
+    box-shadow: 4px 3px 5px 0px rgba(0, 0, 0, 0.75);
   }
 }
 
@@ -631,7 +654,6 @@ $xxLarge-width: "screen and (max-width: 1920px)";
 .other-text {
   border: #000 solid thick;
   width: 300px;
-  height: 400px;
   margin-left: -100px;
   margin-top: -50px;
   z-index: 10;
@@ -640,8 +662,136 @@ $xxLarge-width: "screen and (max-width: 1920px)";
 .other-text-size {
   text-align: justify;
   color: $gold-color;
-  font-size: 2em;
-  padding: 30px 30px 30px 160px;
+  font-size: 2.5em;
+  font-family: aliens;
+  text-transform: uppercase;
+}
+
+.other-1 {
+  margin-bottom: 50px;
+  height: 350px;
+  margin-left: 250px;
+
+  .other-text-size {
+    padding: 30px 30px 30px 130px;
+  }
+}
+
+.other-2 {
+  height: 350px;
+  margin-right: -50px;
+  margin-bottom: 150px;
+
+  .other-text {
+    margin-right: -50px;
+  }
+
+  .other-text-size {
+    padding: 30px 130px 30px 30px;
+  }
+
+  .other-image {
+    width: 350px;
+  }
+}
+
+.other-3 {
+  height: 350px;
+  margin-left: 350px;
+  margin-bottom: 30px;
+
+  .other-text {
+    margin-right: -50px;
+    height: 250px;
+    width: 350px;
+  }
+
+  .other-text-size {
+    padding: 30px 30px 30px 130px;
+  }
+
+  .other-image {
+    width: 350px;
+  }
+}
+
+.other-4 {
+  height: 450px;
+  margin-left: 100px;
+  margin-bottom: 70px;
+
+  .other-text {
+    margin-right: -80px;
+    height: 450px;
+    width: 350px;
+  }
+
+  .other-text-size {
+    padding: 30px 180px 30px 30px;
+  }
+
+  .other-image {
+    width: 350px;
+  }
+}
+
+.contact-header {
+  font-size: 8em;
+  font-family: slim;
+  color: rgba(255, 224, 138, .4);
+  //text-shadow: 1px 1px 2px #000000;
+}
+
+.contact-input {
+  font-family: regular;
+  color: $gold-color;
+  font-size: 1.5em;
+  width: 400px;
+  padding: 5px 5px;
+  border: none;
+  border-bottom: rgba(255, 224, 138, .4) solid medium;
+  background: transparent;
+}
+
+.contact-text {
+  font-size: 1em;
+}
+
+.contact-label {
+  font-family: regular;
+  color: $gold-color;
+}
+
+.contact-submit {
+  border: rgba(255, 224, 138, .4) solid medium;
+  background: transparent;
+  color: $gold-color;
+  width: 410px;
+  height: 40px;
+  font-family: regular;
+  letter-spacing: 2px;
+  transition: 300ms cubic-bezier(.42, 0, 1, 1);
+
+  &:hover {
+    background: rgba(255, 224, 138, .4);
+    border: rgba(255, 224, 138, 0);
+    color: $background-gradient-black-dark;
+    transition: 300ms cubic-bezier(.42, 0, 1, 1);
+  }
+}
+
+.contact-submit-done {
+  margin-top: 30px;
+  width: 410px;
+  height: 25px;
+  text-align: center;
+  font-family: regular;
+  font-size: 1.3em;
+  letter-spacing: .3em;
+  color: $gold-color;
+  display: none;
+  transition: 300ms cubic-bezier(.42, 0, 1, 1);
+
 }
 
 .slide-in-left {
